# ChangeLog for sys-apps/usb_modeswitch
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/usb_modeswitch/ChangeLog,v 1.13 2011/01/30 14:18:39 rafaelmartins Exp $

  30 Jan 2011; Rafael G. Martins <rafaelmartins@gentoo.org> metadata.xml:
  Added myself to metadata.xml

  10 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  usb_modeswitch-1.1.4.ebuild:
  x86 stable wrt bug #339880

  08 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  usb_modeswitch-1.1.4.ebuild:
  Stable on amd64 wrt bug #339880

*usb_modeswitch-1.1.4 (02 Sep 2010)

  02 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +usb_modeswitch-1.1.4.ebuild:
  Version bump (by Agostino "ago" Sarubbo from Freenode).

*usb_modeswitch-1.1.3-r1 (12 Jul 2010)

  12 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  +usb_modeswitch-1.1.3-r1.ebuild:
  Revision bump for usb-modeswitch-data-20100707.

*usb_modeswitch-1.1.3 (26 Jun 2010)

  26 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  +usb_modeswitch-1.1.3.ebuild:
  Version bump.

*usb_modeswitch-1.1.2 (14 May 2010)

  14 May 2010; Hanno Boeck <hanno@gentoo.org> +usb_modeswitch-1.1.2.ebuild,
  +files/usb_modeswitch-1.1.2-makefile.diff:
  Version bump, now needs usb_modeswitch-data for udev rules. Patch to
  respect LDFLAGS and to make dodir command unneccessary.

*usb_modeswitch-1.1.1 (05 Apr 2010)

  05 Apr 2010; Peter Volkov <pva@gentoo.org> +usb_modeswitch-1.1.1.ebuild:
  Version bump.

*usb_modeswitch-1.1.0 (21 Feb 2010)

  21 Feb 2010; Robin H. Johnson <robbat2@gentoo.org>
  +usb_modeswitch-1.1.0.ebuild:
  Version bump per bug #306133

  11 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  usb_modeswitch-0.9.4.ebuild, usb_modeswitch-1.0.2.ebuild:
  Bug #282532: make sure to bring in virtual/libusb:0 so that libusb-1 is
  not used.

*usb_modeswitch-1.0.2 (27 Jun 2009)

  27 Jun 2009; Hanno Boeck <hanno@gentoo.org> +usb_modeswitch-1.0.2.ebuild:
  Version bump.
