@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/usb_modeswitch
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/usb_modeswitch/ChangeLog,v 1.13 2011/01/30 14:18:39 rafaelmartins Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/usb_modeswitch/ChangeLog,v 1.14 2011/02/12 18:15:49 rafaelmartins Exp $
+
+*usb_modeswitch-1.1.6 (12 Feb 2011)
+
+  12 Feb 2011; Rafael G. Martins <rafaelmartins@gentoo.org>
+  +usb_modeswitch-1.1.6.ebuild:
+  Version bump.
 
   30 Jan 2011; Rafael G. Martins <rafaelmartins@gentoo.org> metadata.xml:
   Added myself to metadata.xml
